dev: enhance transceiver module

--- a/component/transceivercom/ec200a-4g/ec200a-4g.md
+++ b/component/transceivercom/ec200a-4g/ec200a-4g.md
@@ -1,4 +1,5 @@
-# EC200A 的4G模组操作接口
+# EC200A
+![ec200a](image/ec200a-4g/1719544670324.png)
 ## 简介
 EC200A自带一个4G上网模组，可以实现接入移动网络远程上网。该控制接口只可兼容上海移远公司的下列模组：
 - EC200T 系列
